Added profile for logged in User and ability to view receiver user profile

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="empty_group_name_error_text">Please enter a group name</string>
     <string name="empty_selected_members_error_text">Please select group members</string>
     <string name="new_group_name_hint">Type group name here</string>
+    <string name="profile">Profile</string>
 </resources>
